--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@ grey: #e9ecef
 
 .site-container {
     position: relative;
-    height: 100%;
 }
 
 @keyframes sidebar-show {
@@ -58,6 +57,7 @@ grey: #e9ecef
 
 .navbar {
   position: fixed;
+  height: 4em;
   top: 0;
   left: 0;
 }
@@ -71,6 +71,7 @@ grey: #e9ecef
 
 #main-carousel {
   height: 400;
+  margin-top: 4em;
 }
 
 .carousel-item img {
@@ -81,11 +82,11 @@ grey: #e9ecef
 }
 
 .carousel-caption-container {
-  position: absolute;
-  top: 0;
+  /* position: absolute; */
+  /* top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 0; */
 }
 
 .transluscent-33 {
@@ -99,21 +100,13 @@ grey: #e9ecef
 .caption-limited {
   overflow: hidden;
 }
-
-.carousel-caption.center {
-  position: absolute;
-  padding-top: 0;
-  top: 40%;
-  text-align: center;
-  margin: auto;
-}
-
+/*
 @media screen and (max-width: 992px) {
   .carousel-caption span {
     font-size: 2.2rem;
     font-weight: 300;
   }
-}
+} */
 
 .section-header {
   font-weight: 600;
@@ -149,7 +142,9 @@ grey: #e9ecef
 
 .section-body {
   min-width: 100%;
-  margin-top: 2em;
+  margin-top: 1.5em;
+  padding-left: 2em;
+  padding-right: 2em;
 }
 
 .section-artists .col {
