--- a/src/index.css
+++ b/src/index.css
@@ -366,3 +366,51 @@ grey: #e9ecef
   width: 100px;
   height: auto;
 }
+
+.navbar-other {
+  overflow: hidden;
+}
+
+.btn-register {
+  line-height: 1.5em;
+  margin-left: 1em;
+}
+
+.fa {
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 0.25rem;
+}
+
+.fa:hover {
+    opacity: 0.7;
+    text-decoration: none;
+}
+
+.fa-facebook {
+  line-height: 2em;
+  width: 2em;
+  margin: 0em 0.25em 0em 0.25em;
+  background: #3B5CA0;
+}
+
+.fa-twitter {
+  line-height: 2em;
+  width: 2em;
+  margin: 0em 0.25em 0em 0.25em;
+  background: #4D89CA;
+  color: white;
+}
+
+.instagram {
+  width: 2em;
+  height: 2em;
+  text-align: center;
+  color: #fff;
+  line-height: 2em;
+  vertical-align: middle;
+  border-radius: 0.25rem;
+  background: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+}
