--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,60 @@ main color: #ff5722
 grey: #e9ecef
 */
 
-.site-container {
-    position: relative;
+body {
+  height: 100%;
+}
+
+a, a:hover {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  color: #ff5722;
+}
+
+.logo {
+  width: 2em;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.logo-icon {
+  background-image: url('./images/logo-icon.png');
+}
+
+.logo-text {
+  width: 6em;
+  /* margin-left: 0.5em; */
+  background-image: url('./images/logo.png');
+}
+
+
+@media screen and (max-width: 768px) {
+  .navbar {
+    justify-content: center;
+  }
+
+  .navbar .navbar-toggler {
+    margin-right: auto;
+  }
+
+  .navbar .navbar-brand-section {
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .navbar-brand-section .logo-icon {
+    display: none !important;
+  }
+}
+
+.site-container, .main-content {
+    height: 100%
 }
 
 @keyframes sidebar-show {
@@ -19,11 +71,10 @@ grey: #e9ecef
 }
 
 #sidebar {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
   width: 0px;
-  height: 100%;
+  height: 100vh;
   z-index: 1035;
   padding: 0;
 }
@@ -46,6 +97,10 @@ grey: #e9ecef
   overflow: hidden;
 }
 
+.sidebar-header {
+  height: 2em;
+}
+
 .sidebar-navitems, .sidebar-header {
   overflow: hidden;
 }
@@ -54,7 +109,11 @@ grey: #e9ecef
   color: black !important;
 }
 
-#sidebar.sidebar-toggler a {
+.sidebar-header .sidebar-toggler {
+  line-height: 100%;
+}
+
+.sidebar-header .sidebar-toggler a {
   outline: 0 !important;
   outline-offset: 0  !important;
 }
@@ -83,32 +142,51 @@ grey: #e9ecef
 }
 
 #main-carousel {
-  height: calc(100% - 8em);
+  height: calc(100% - 4em);
 }
 
 #boff-stats {
   background-color: #4D4D4D;
+  padding: 0.5em;
 }
 
-.stats-main {
-  font-size: 2em;
+#boff-stats div {
+  overflow: hidden;
+}
+
+.boff-stats-item {
+  border: 0;
+  border-right: 1px;
+  border-style: solid;
+}
+
+.boff-stats-item:last-child {
+  border: 0;
+}
+
+@media screen and (max-width: 992px) {
+  #main-carousel {
+    height: calc(100% - 8em);
+  }
+
+  #boff-stats {
+    flex-direction: column;
+  }
+
+  .boff-stats-item {
+    border: 0;
+    border-bottom: 1px;
+    border-style: solid;
+  }
 }
 
 .carousel-item {
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .carousel-item:nth-child(1){
   background-image: url('./images/car.jpg');
-}
-
-
-
-.carousel-caption-container {
-  /* position: absolute; */
-  /* top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; */
 }
 
 .transluscent-33 {
@@ -119,16 +197,10 @@ grey: #e9ecef
   background-color: #000000a8;
 }
 
-.caption-limited {
-  overflow: hidden;
+.carousel-caption .header {
+  font-size: 2em;
+  font-weight: bold;
 }
-/*
-@media screen and (max-width: 992px) {
-  .carousel-caption span {
-    font-size: 2.2rem;
-    font-weight: 300;
-  }
-} */
 
 .section-header {
   font-weight: 600;
@@ -384,8 +456,8 @@ grey: #e9ecef
 }
 
 .fa:hover {
-    opacity: 0.7;
-    text-decoration: none;
+  opacity: 0.7;
+  text-decoration: none;
 }
 
 .fa-facebook {
